# diffusion_policy

./: README.md  conda_environment.yaml  conda_environment_macos.yaml  conda_environment_real.yaml  demo_pusht.py  demo_real_robot.py  eval.py  eval_real_robot.py  pyproject.toml  train.py
diffusion_policy/env/pusht/: pusht_env.py
diffusion_policy/env_runner/: pusht_keypoints_runner.py
diffusion_policy/policy/: diffusion_transformer_hybrid_image_policy.py  diffusion_unet_hybrid_image_policy.py  diffusion_unet_lowdim_policy.py  ibc_dfo_hybrid_image_policy.py
diffusion_policy/workspace/: train_diffusion_unet_lowdim_workspace.py
notebooks/: diffusion_policy_state_pusht_demo.ipynb
